--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <title>HardwareShop</title>
 </head>
 
+
 <body >
     <header class="container-fluid">
       <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="./assets/image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
+              <a class="navbar-brand" href="./index.html"><img src="./assets/image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,7 +42,7 @@
     </header>
     <main class="padre" >
         <section>
-           <div class="sector hijo">
+           <div class="sector hijo ab">
            <img src="./assets/image/descarga.jpg" class="sector-img" alt="publicidad">
             <h2>Pc Gamers</h2>
             <p>
@@ -50,7 +51,7 @@
            </div>
         </section>
         <section>
-            <div class="sector hijo">
+            <div class="sector hijo c">
               <img src="./assets/image/componentes.png" class="sector-img" alt="publicidad">
                 <h2>HardwareShop</h2>
                 <p>
@@ -59,7 +60,7 @@
             </div>
         </section>
         <section>
-            <div class=" sector hijo publicidad">
+            <div class=" sector hijo publicidad e">
               <h2>Comprar por categorias</h2>
               <img src="./assets/image/publicidad.jpg" class="sector-img" alt="publicidad">
                 <ul>
@@ -78,10 +79,45 @@
                 </ul>
             </div>
         </section>
+        <section>
+          <div class="sector hijo d">
+<h2>conoce nuestras politicas</h2>
+          </div>
+        </section>
+        <section class="sectorCarrucel ef">
+          <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100 carrucelImg" src="/assets/image/publicidad-carrucel.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100 carrucelImg" src="/assets/image/publicidad-carrucel2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100 carrucelImg" src="/assets/image/publicidad-carrucel3.png" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only"></span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only"></span>
+              </a>
+            </div>
+          </div>
+        </section>
     </main>
-    <footer class="pie">
-        <h4><a href="./assets//views/contacto.html">Contacto</a></h4>
-        <h4>Copyright &copy; todos los derechos reservados HardwareShop</h4>
+    <footer>
+         <bottom><a href="./assets//views/contacto.html">Contacto</a></bottom>
+        <P>Copyright &copy; todos los derechos reservados HardwareShop</P>
     </footer>
 </body>
 
