--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
             </a>
           </div>
         </div>
-      
     </header>
     <main>
+      <div class="main-container">
+
         <section>
            <div class="sector hijo ab">
              <h2>Pc Gamers</h2>
@@ -96,7 +97,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <!-- <section>
             <div class=" sector hijo publicidad e">
               <h2>Comprar por categorias</h2>
               <img src="./assets/image/publicidad.jpg" class="sector-img" alt="publicidad">
@@ -115,12 +116,57 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <section>
-          <div class="sector hijo d">
-<h2>conoce nuestras politicas</h2>
+          <div class="sText sHijo n">
+<p>
+   aca vas a poder encontrar los mejores perifericos para potenciar tu lado Gaming.
+</p>
           </div>
         </section>
+        <section>
+          <div class="sText sHijo j">
+<p>
+   Tambien podes encontrar los mejores componentes para llevar al maximo tu PC.
+</p>
+          </div>
+        </section>
+      </div>
+      <div class="main-container-marcas">
+      <div class="mainMarcasText">
+        <h2>Disfruta de las mejores marcas</h2>
+      </div>
+      <div class="mainMarcasImg u">
+        <img src="./assets/image/amd.png" style="width: 200px; height: 100px" alt="logo amd">
+      </div>
+      <div class="mainMarcasImg i">
+        <img src="./assets/image/asus.png" style="width: 200px; height: 100px" alt="logo asus">
+      </div>
+      <div class="mainMarcasImg r">
+        <img src="./assets/image/corsair.png" style="width: 200px; height: 100px" alt="logo corsair">
+      </div>
+      <div class="mainMarcasImg w">
+        <img src="./assets/image/evga.png" style="width: 200px; height: 100px" alt="logo evga">
+      </div>
+      <div class="mainMarcasImg x">
+        <img src="./assets/image/gigabyte.png" style="width: 200px; height: 100px" alt="logo gigagyte">
+      </div>
+      <div class="mainMarcasImg t">
+        <img src="./assets/image/hp.png" style="width: 200px; height: 100px" alt="logo hp">
+      </div>
+      <div class="mainMarcasImg y">
+        <img src="./assets/image/intel.png" style="width: 200px; height: 100px" alt="logo intel">
+      </div>
+      <div class="mainMarcasImg z">
+        <img src="./assets/image/logitech.png" style="width: 200px; height: 100px" alt="logo logitech">
+      </div>
+      <div class="mainMarcasImg m">
+        <img src="./assets/image/logo-msi-2017-oficial.png" style="width: 200px; height: 100px" alt="logo msi">
+      </div>
+      <div class="mainMarcasImg f">
+        <img src="./assets/image/razer.png" style="width: 200px; height: 100px" alt="logo razer">
+      </div>
+      </div>
     </main>
     <footer>
          <bottom><a href="./assets//views/contacto.html">Contacto</a></bottom>
