aplicando sass II y mejorando SEO

--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="En HardwareShop vas a poder encontrar los mejores componentes para armar tu PC y productos para Gaming"/>
+    <meta name="keywords" content="hardware, software,tecnología,componentes,pc,gamer" />
+    <meta name="author" content="Carrazana Franco" />
+    <meta name="copyright" content="Copyright (c) 2022 by HardwareShop" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>HardwareShop</title>
 </head>
 
 
 <body >
     <header class="container-fluid">
+      <!-- menu -->
       <div class="row">
         <div class="menu col-xs-12 col-sm-12 col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -36,10 +41,10 @@
                       <a class="nav-link" href="./assets/views/contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/views/contacto.html">Politicas y Privaciadad</a>
+                      <a class="nav-link" href="./assets/views/politicas.html">Politicas y Privaciadad</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./assets/views/contacto.html">Preguntas Frecuentes</a>
+                      <a class="nav-link" href="./assets/views/preguntas.html">Preguntas Frecuentes</a>
                     </li>
                   </ul>
                 </div>
@@ -47,17 +52,18 @@
             </nav>
         </div>
       </div>
+      <!-- carrucel -->
       <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./assets/image/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
+              <img src="./assets/image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img src="./assets/image/publicidad-carrucel2.png" class="d-block w-100" alt="Second slide">
+              <img src="./assets/image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img src="./assets/image/publicidad-carrucel3.png" class="d-block w-100" alt="Third slide">
+              <img src="./assets/image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -72,20 +78,21 @@
       </div>
     </header>
     <main>
+      <!-- sector de publicidad -->
       <div class="main-container">
         <div class="sTitulo sHijo p">
            <h1 class="sh1">Potencia tu manera de jugar</h1>
         </div>
-           <div class="sector hijo ab">
+           <div class="sector hijo c">
              <h2>Pc Gamers</h2>
-             <img src="./assets/image/descarga.jpg" class="sector-img" alt="publicidad">
+             <img src="./assets/image/contenido/gaming.png" alt="pc gamer" class="sector-img">
             <p>
                 Empeza a viciar
             </p>
            </div>
-            <div class="sector hijo c">
+            <div class="sector hijo ab">
               <h2>HardwareShop</h2>
-              <img src="./assets/image/componentes.png" class="sector-img" alt="publicidad">
+              <img src="./assets/image/contenido/componentes.png" class="sector-img" alt="publicidad">
                 <p>
                    Tienda dedicada a componentes de pc 
                 </p>
@@ -101,39 +108,40 @@
             </p>
           </div>
       </div>
+      <!-- publicidad de marcas -->
       <div class="main-container-marcas">
       <div class="mainMarcasText">
         <h2>Disfruta de las mejores marcas</h2>
       </div>
       <div class="mainMarcasImg u">
-        <img src="./assets/image/amd.png" style="width: 200px; height: 100px" alt="logo amd">
+        <img src="./assets/image/logos-marcas/amd.png" style="width: 200px; height: 100px" alt="logo amd">
       </div>
       <div class="mainMarcasImg i">
-        <img src="./assets/image/asus.png" style="width: 200px; height: 100px" alt="logo asus">
+        <img src="./assets/image/logos-marcas/asus.png" style="width: 200px; height: 100px" alt="logo asus">
       </div>
       <div class="mainMarcasImg r">
-        <img src="./assets/image/corsair.png" style="width: 200px; height: 100px" alt="logo corsair">
+        <img src="./assets/image/logos-marcas/corsair.png" style="width: 200px; height: 100px" alt="logo corsair">
       </div>
       <div class="mainMarcasImg w">
-        <img src="./assets/image/evga.png" style="width: 200px; height: 100px" alt="logo evga">
+        <img src="./assets/image/logos-marcas/evga.png" style="width: 200px; height: 100px" alt="logo evga">
       </div>
       <div class="mainMarcasImg x">
-        <img src="./assets/image/gigabyte.png" style="width: 200px; height: 100px" alt="logo gigagyte">
+        <img src="./assets/image/logos-marcas/gigabyte.png" style="width: 200px; height: 100px" alt="logo gigagyte">
       </div>
       <div class="mainMarcasImg t">
-        <img src="./assets/image/hp.png" style="width: 200px; height: 100px" alt="logo hp">
+        <img src="./assets/image/logos-marcas/hp.png" style="width: 200px; height: 100px" alt="logo hp">
       </div>
       <div class="mainMarcasImg y">
-        <img src="./assets/image/intel.png" style="width: 200px; height: 100px" alt="logo intel">
+        <img src="./assets/image/logos-marcas/intel.png" style="width: 200px; height: 100px" alt="logo intel">
       </div>
       <div class="mainMarcasImg z">
-        <img src="./assets/image/logitech.png" style="width: 200px; height: 100px" alt="logo logitech">
+        <img src="./assets/image/logos-marcas/logitech.png" style="width: 200px; height: 100px" alt="logo logitech">
       </div>
       <div class="mainMarcasImg m">
-        <img src="./assets/image/logo-msi-2017-oficial.png" style="width: 200px; height: 100px" alt="logo msi">
+        <img src="./assets/image/logos-marcas/logo-msi-2017-oficial.png" style="width: 200px; height: 100px" alt="logo msi">
       </div>
       <div class="mainMarcasImg f">
-        <img src="./assets/image/razer.png" style="width: 200px; height: 100px" alt="logo razer">
+        <img src="./assets/image/logos-marcas/razer.png" style="width: 200px; height: 100px" alt="logo razer">
       </div>
       </div>
     </main>
