--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
             </nav>
         </div>
       </div>
-      <!-- carrucel -->
-      <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
+    </div>
+  </header>
+  <main>
+    <!-- carrucel -->
+      <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12 l" >
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -75,14 +78,11 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
-    </header>
-    <main>
-      <!-- sector de publicidad -->
-      <div class="main-container">
-        <div class="sTitulo sHijo p">
+        <!-- sector de publicidad -->
+        <div class="sTitulo sHijo l">
            <h1 class="sh1">Potencia tu manera de jugar</h1>
         </div>
+        <div class="main-container">
            <div class="sector hijo c">
              <h2>Pc Gamers</h2>
              <img src="./assets/image/contenido/gaming.png" alt="pc gamer" class="sector-img">
@@ -110,46 +110,46 @@
       </div>
       <!-- publicidad de marcas -->
       <div class="main-container-marcas">
-      <div class="mainMarcasText">
-        <h2>Disfruta de las mejores marcas</h2>
-      </div>
+        <div class="mainMarcasText">
+          <h2>Disfruta de las mejores marcas</h2>
+        </div>
       <div class="mainMarcasImg u">
-        <img src="./assets/image/logos-marcas/amd.png" style="width: 200px; height: 100px" alt="logo amd">
+        <img src="./assets/image/logos-marcas/amd.png" style="width: 100%" alt="logo amd">
       </div>
       <div class="mainMarcasImg i">
-        <img src="./assets/image/logos-marcas/asus.png" style="width: 200px; height: 100px" alt="logo asus">
+        <img src="./assets/image/logos-marcas/asus.png" style="width: 100%" alt="logo asus">
       </div>
       <div class="mainMarcasImg r">
-        <img src="./assets/image/logos-marcas/corsair.png" style="width: 200px; height: 100px" alt="logo corsair">
+        <img src="./assets/image/logos-marcas/corsair.png" style="width: 100%" alt="logo corsair">
       </div>
       <div class="mainMarcasImg w">
-        <img src="./assets/image/logos-marcas/evga.png" style="width: 200px; height: 100px" alt="logo evga">
+        <img src="./assets/image/logos-marcas/evga.png" style="width: 100%" alt="logo evga">
       </div>
       <div class="mainMarcasImg x">
-        <img src="./assets/image/logos-marcas/gigabyte.png" style="width: 200px; height: 100px" alt="logo gigagyte">
+        <img src="./assets/image/logos-marcas/gigabyte.png" style="width: 100%" alt="logo gigagyte">
       </div>
       <div class="mainMarcasImg t">
-        <img src="./assets/image/logos-marcas/hp.png" style="width: 200px; height: 100px" alt="logo hp">
+        <img src="./assets/image/logos-marcas/hp.png" style="width: 100%" alt="logo hp">
       </div>
       <div class="mainMarcasImg y">
-        <img src="./assets/image/logos-marcas/intel.png" style="width: 200px; height: 100px" alt="logo intel">
+        <img src="./assets/image/logos-marcas/intel.png" style="width: 100%" alt="logo intel">
       </div>
       <div class="mainMarcasImg z">
-        <img src="./assets/image/logos-marcas/logitech.png" style="width: 200px; height: 100px" alt="logo logitech">
+        <img src="./assets/image/logos-marcas/logitech.png" style="width: 100%" alt="logo logitech">
       </div>
       <div class="mainMarcasImg m">
-        <img src="./assets/image/logos-marcas/logo-msi-2017-oficial.png" style="width: 200px; height: 100px" alt="logo msi">
+        <img src="./assets/image/logos-marcas/msi.png" style="width: 100%" alt="logo msi">
       </div>
       <div class="mainMarcasImg f">
-        <img src="./assets/image/logos-marcas/razer.png" style="width: 200px; height: 100px" alt="logo razer">
+        <img src="./assets/image/logos-marcas/razer.png" style="width: 100%" alt="logo razer">
       </div>
       </div>
     </main>
     <footer>
-         <bottom><a href="./assets//views/contacto.html">Contacto</a></bottom>
+        <a href="./assets//views/contacto.html">Contacto</a>
         <P>Copyright &copy; todos los derechos reservados HardwareShop</P>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
